src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BSP_Participation_Status__c</fullName>
        <label>BSP Participation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSPlink_code__c</fullName>
        <label>BSPlink code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Tag_Range_Code__c</fullName>
        <description>Numeric code for the Baggage Tag Range.</description>
        <label>Baggage Tag Range Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_formated__c</fullName>
        <formula>if(LEN(BillingStreet)&gt;0, BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; 
if(LEN(BillingCity)&gt;0, BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp; 
if(LEN(BillingPostalCode)&gt;0, BillingPostalCode&amp; &quot; &quot; , &quot;&quot; )&amp; BR() &amp; 
if(LEN(BillingState)&gt;0, BillingState,&quot;&quot;) &amp; 
If(LEN(BillingCountry) &gt;0, BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address formated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Type__c</fullName>
        <label>Branch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMP_Agreement__c</fullName>
        <description>FDS. Agency Accounts. Used to track Agent compliance / submission of executed CAMP Agreements and to follow up with Agents pending submission of agreements to IATA.</description>
        <label>CAMP Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CASS_CI_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CASS CI Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASS_FOC_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CASS FOC Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASS_Name__c</fullName>
        <formula>IATA_ISO_Country__r.Name</formula>
        <label>CASS Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASS_Number_Xref__c</fullName>
        <label>CASS Number Xref</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASS_Number__c</fullName>
        <label>CASS Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASS_Participant_value__c</fullName>
        <description>Roll-up to count the active CASS participation services rendered where the account is the Consumer</description>
        <label>CASS Participant value</label>
        <summaryFilterItems>
            <field>Services_Rendered__c.Services_Rendered_Type__c</field>
            <operation>equals</operation>
            <value>CASS Export via GSSA, CASS Export Direct Participation, CASS Import Direct Participation, CASS Import via GHA, CASS Participation, CASS via GSSA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Services_Rendered__c.Services_Rendered_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Services_Rendered__c.Services_Rendered_to_Airline__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCG_IRR_Distribution_list__c</fullName>
        <description>Distribution list of the external and internal stakeholders to be copied in case a CCG code gets assigned an irregularity.</description>
        <inlineHelpText>Distribution list of the external and internal stakeholders to be copied in case a CCG code gets assigned an irregularity. This is done automatically when using &quot;Send NOI&quot; links in the SIDRA case.</inlineHelpText>
        <label>CCG IRR Distribution list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCG_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>tracking the CCG participants HO and AO (IDFS cargo)</description>
        <label>CCG Participant / KAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNS_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[CNS Portal CRM] used to identify the accounts belonging to CNS. (used for all kind of accounts, agencies, airlines, GSSAs...)</description>
        <label>CNS Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNS_Agency__c</fullName>
        <formula>AND( 
   IATA_ISO_Country__r.CNS_Country__c=true, 
   OR(ISPICKVAL(Location_Class__c,&quot;C&quot;),ISPICKVAL(Location_Class__c,&quot;R&quot;))
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNS Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNS_Country__c</fullName>
        <formula>IATA_ISO_Country__r.CNS_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNS Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Code__c</fullName>
        <label>C Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Account)</relationshipLabel>
        <relationshipName>Cargo_Agencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cass_Participant_formula__c</fullName>
        <formula>IF ( CASS_Participant_value__c &gt; 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Airline participating in this CASS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Other_Value__c</fullName>
        <description>This field is mandatory if you chose Category as Other</description>
        <label>Category (Other) Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic/Research Body</fullName>
                </value>
                <value>
                    <fullName>Agency Holding Company</fullName>
                </value>
                <value>
                    <fullName>Aircraft Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Airline Alliance</fullName>
                </value>
                <value>
                    <fullName>Airline Global Card Acquirer</fullName>
                </value>
                <value>
                    <fullName>Airline Holding Company</fullName>
                </value>
                <value>
                    <fullName>Airline Point of Sale</fullName>
                </value>
                <value>
                    <fullName>Airport Authority</fullName>
                </value>
                <value>
                    <fullName>Airport Concessionaire</fullName>
                </value>
                <value>
                    <fullName>Airport Operator</fullName>
                </value>
                <value>
                    <fullName>ANSP</fullName>
                </value>
                <value>
                    <fullName>Apartment &amp; Villa Rental</fullName>
                    <label>Apartment and Villa Rental</label>
                </value>
                <value>
                    <fullName>Banking Service</fullName>
                </value>
                <value>
                    <fullName>Box Office</fullName>
                </value>
                <value>
                    <fullName>Bus Line</fullName>
                </value>
                <value>
                    <fullName>Card Brand</fullName>
                </value>
                <value>
                    <fullName>Cargo only</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Casino</fullName>
                </value>
                <value>
                    <fullName>CASS Associate</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation Authority</fullName>
                </value>
                <value>
                    <fullName>Consultancy Firm</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Cruise Line</fullName>
                </value>
                <value>
                    <fullName>Domestic Agent</fullName>
                </value>
                <value>
                    <fullName>DPC</fullName>
                </value>
                <value>
                    <fullName>Engine Manufacturer</fullName>
                </value>
                <value>
                    <fullName>ERSP Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Generated_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Generated for Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Digit__c</fullName>
        <label>Check Digit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_level__c</fullName>
        <description>Clearance level performed on account by due diligence</description>
        <label>Clearance level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Level 1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Level 2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Level 3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Level 4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Case_Indicator__c</fullName>
        <inlineHelpText>Indicates whether there is an open collection case, or if the last collection case was closed with the invoice not paid.</inlineHelpText>
        <label>Collection Case Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Termination__c</fullName>
        <label>Membership Termination Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_data_quality_feedback__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Reason_for_creation__c</fullName>
        <description>Comments for the &quot;Reason of creation&quot; field</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <formula>IMAGE(Logo_File_ID__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_PCKEY__c</fullName>
        <externalId>true</externalId>
        <label>Company PCKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <inlineHelpText>A - Association
C - Corporation
E - Government Owned Enterprise
L - Limited Company
O - Other
P - Partnership
R - Limited Partnership
S - Sole Proprietorship
T - Trust Company
V - Co-operative</inlineHelpText>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ICCS_Email_Activity__c</fullName>
        <description>Report allowing to track ICCS mass emails sent out to the Account Contacts</description>
        <formula>HYPERLINK(&quot;https://iata.my.salesforce.com/00Ow0000005aL0E?drilldown=1&amp;drillcol=072w0000001aW9b&amp;drillval=&quot; &amp; Id &amp; &quot;&amp;drillop=equals&quot;, &quot;Report on ICCS mass emails sent out to &quot; &amp; Name &amp; &quot; Contacts&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ICCS Email Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Accumulated_Irregularities__c</fullName>
        <formula>IF(SUM_A_Irregularities__c - SUM_W_Irregularities__c &lt; 0, 0, SUM_A_Irregularities__c - SUM_W_Irregularities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accumulated Irregularities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Countries_not_live_yet__c</fullName>
        <description>Lis of IATA ISO Countries.</description>
        <label>Countries (not live yet)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Timor-Leste</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Niger</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Qatar</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Switzerland &amp; Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>Mauritania</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Haiti</fullName>
                </value>
                <value>
                    <fullName>Cook Islands</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Tuvalu</fullName>
                </value>
                <value>
                    <fullName>Sudan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Chinese Taipei</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Malawi</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Lebanon</fullName>
                </value>
                <value>
                    <fullName>Gabon</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <description>Field is used in the de-duplication scenarios.</description>
        <formula>IATA_ISO_Country__r.ISO_Code__c</formula>
        <label>Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_OSCAR_Enabled__c</fullName>
        <formula>IATA_ISO_Country__r.OSCAR_enabled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country OSCAR Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covered_Ownership__c</fullName>
        <description>The sum of percentage of all &quot;AMS Account Role&quot; with record type Ownership and &quot;Active&quot; = true</description>
        <label>Covered Ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>IEC - type of customer</description>
        <label>Ecommerce Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Airline</fullName>
                </value>
                <value>
                    <fullName>Non-member</fullName>
                    <default>true</default>
                    <label>Non-member</label>
                </value>
                <value>
                    <fullName>Accredited Training Schools (ATS)</fullName>
                </value>
                <value>
                    <fullName>Accredited Training Center (ATC)</fullName>
                </value>
                <value>
                    <fullName>Sales Agents (Platinum)</fullName>
                </value>
                <value>
                    <fullName>Sales Agents (Generic)</fullName>
                </value>
                <value>
                    <fullName>Strategic Partners</fullName>
                </value>
                <value>
                    <fullName>IATA Employees (work related reason)</fullName>
                </value>
                <value>
                    <fullName>IATA Employee (commercial purposes)</fullName>
                </value>
                <value>
                    <fullName>Service Providers</fullName>
                </value>
                <value>
                    <fullName>Sales Agent (Generic 2)</fullName>
                </value>
                <value>
                    <fullName>Sales Agent (Startup)</fullName>
                </value>
                <value>
                    <fullName>CNS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDS_Last_Notification_Date__c</fullName>
        <label>EU Agent Consent Last Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDS_Last_Update_Date__c</fullName>
        <label>EU Agent Consent Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDS_Status_Parent__c</fullName>
        <formula>IF(isblank(ParentId), text(DDS_Status__c), TEXT(Parent.DDS_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Agent Consent Status (Parent)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_Status__c</fullName>
        <label>EU Agent Consent Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Reply</fullName>
                </value>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>multinational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud Customer 360: used internally for the data conversion process</description>
        <inlineHelpText>Cloud Customer 360: used internally for the data conversion process</inlineHelpText>
        <label>Converted from Cloud Customer 360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Hierarchy_Level__c</fullName>
        <description>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</description>
        <inlineHelpText>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</inlineHelpText>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud Customer 360: synchronize Account data with Bean</description>
        <inlineHelpText>Cloud Customer 360: synchronize Account data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent_Name__c</fullName>
        <description>Cloud Customer 360: Name of the Ultimate Parent Account</description>
        <inlineHelpText>Cloud Customer 360: Name of the Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cloud Customer 360: Ultimate Parent Account</description>
        <inlineHelpText>Cloud Customer 360: Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subsidiaries</relationshipLabel>
        <relationshipName>Subsidiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Installed_Products__c</fullName>
        <label>Installed Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dish Washer</fullName>
                </value>
                <value>
                    <fullName>Fryer</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__X_Internal__c</fullName>
        <description>Used by Cloud Customer 360 internally</description>
        <inlineHelpText>Used by Cloud Customer 360 internally</inlineHelpText>
        <label>X_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status__c,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( ISPICKVAL( Location_Type__c,&quot;&quot;),&quot;Location Type, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( LEN(Name) = 0, &quot;Name, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( LEN(IATACode__c) != 8, &quot;IATA Code short, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( ISPICKVAL( Sector__c,&quot;&quot;),&quot;Sector, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( ISPICKVAL( Category__c,&quot;&quot;),&quot;Category, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( LEN(Reason__c) = 0, &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( LEN(Short_Name__c) = 0, &quot;Short Name, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( ISPICKVAL(Company_Type__c,&quot;&quot;),&quot;Company Type, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF(AND(OR(ISPICKVAL(Location_Type__c,&quot;HO&quot;),ISPICKVAL(Location_Type__c,&quot;AO&quot;)),Has_a_Financial_Assessment_Contact__c = FALSE), &quot;Financial Assessment Contact, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF(AND(OR(ISPICKVAL(Location_Type__c,&quot;HO&quot;),ISPICKVAL(Location_Type__c,&quot;AO&quot;)),Has_an_Administrator_User_Portal__c = FALSE), &quot;Portal Admin User, &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF(AND(OR(ISPICKVAL(Location_Type__c,&quot;HO&quot;),ISPICKVAL(Location_Type__c,&quot;AO&quot;)),ISPICKVAL(Fin_statements_submission_deadline__c,&quot;&quot;)), &quot;FA Submis. Deadline, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF(AND(OR(ISPICKVAL(Location_Type__c,&quot;HO&quot;),ISPICKVAL(Location_Type__c,&quot;AO&quot;)),LEN(Phone)= 0), &quot;Telephone(HO), &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF(AND(OR(ISPICKVAL(Location_Type__c,&quot;HO&quot;),ISPICKVAL(Location_Type__c,&quot;AO&quot;)),LEN(Email__c)= 0), &quot;Email(HO), &quot;,&quot;&quot;)&amp;&quot;&quot; &amp;IF( ISBLANK(Accreditation_date__c), &quot;Accreditation Date, &quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(AND(RecordTypeId =&quot;012w0000000QBMW&quot;,NOT(CONTAINS(Name, &quot;BSP&quot;)),NOT(CONTAINS(Name, &quot;Test&quot;)),NOT(CONTAINS(Name, &quot;test&quot;)),NOT(CONTAINS(Name, &quot;TEST&quot;)),NOT(CONTAINS(Name, &quot;SPDR&quot;)),
OR(ISPICKVAL(Location_Class__c,&quot;P&quot;),ISPICKVAL(Location_Class__c,&quot;D&quot;)),OR(ISPICKVAL(Status__c,&quot;Changes processed&quot;),ISPICKVAL(Status__c,&quot;Cash basis/no commission&quot;),ISPICKVAL(Status__c,&quot;Cash basis/with commission&quot;),ISPICKVAL(Status__c,&quot;Listed&quot;),ISPICKVAL(Status__c,&quot;Review&quot;),ISPICKVAL(Status__c,&quot;Under review&quot;),ISPICKVAL(Status__c,&quot;approved&quot;))),

(IF( ISPICKVAL(Status__c,&quot;&quot;), 0,10) 
+IF( ISPICKVAL(Location_Type__c,&quot;&quot;), 0,10) 

+ IF( LEN(IATACode__c) != 8, 0,10) + IF( LEN(Name) = 0, 0,10) 
+ IF( ISBLANK(Accreditation_date__c), 0,10) 
+ IF( ISPICKVAL(Sector__c,&quot;&quot;), 0,5) + IF( ISPICKVAL(Category__c,&quot;&quot;), 0,5) 
+IF(LEN(Short_Name__c)= 0, 0,5) + IF( ISPICKVAL(Company_Type__c,&quot;&quot;), 0,5) 
+IF(OR(ISPICKVAL(Location_Type__c,&quot;BR&quot;),ISPICKVAL(Location_Type__c,&quot;SA&quot;)),5,IF(LEN(Phone)= 0,0,5))
+IF(OR(ISPICKVAL(Location_Type__c,&quot;BR&quot;),ISPICKVAL(Location_Type__c,&quot;SA&quot;)),5,IF(LEN(Email__c)= 0,0,5)) 
+IF(OR(ISPICKVAL(Location_Type__c,&quot;BR&quot;),ISPICKVAL(Location_Type__c,&quot;SA&quot;),CONTAINS(Country_ISO_Code__c,&quot;FI&quot;)),5,IF(Has_a_Financial_Assessment_Contact__c = FALSE,0,5)) 
+IF(OR(ISPICKVAL(Location_Type__c,&quot;BR&quot;),ISPICKVAL(Location_Type__c,&quot;SA&quot;)),5,IF(Has_an_Administrator_User_Portal__c = FALSE,0,5)) 
+IF(OR(ISPICKVAL(Location_Type__c,&quot;BR&quot;),ISPICKVAL(Location_Type__c,&quot;SA&quot;),CONTAINS(Country_ISO_Code__c,&quot;FI&quot;)),5,IF( ISPICKVAL(Fin_statements_submission_deadline__c,&quot;&quot;), 0,5)) 

+ IF( LEN(Reason__c) = 0, 0,5)),1)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>